--- a/PiBlogWeb/src/app/home-page/home-page.component.html
+++ b/PiBlogWeb/src/app/home-page/home-page.component.html
@@ -1,1 +1,7 @@
-<p>home-page works!</p>
+<div class="page-content">
+    <div class="wrapper">
+        <div class="home">
+            
+        </div>
+    </div>
+</div>
