--- a/PiBlogWeb/src/app/post-card/post-card.component.html
+++ b/PiBlogWeb/src/app/post-card/post-card.component.html
@@ -1,15 +1,15 @@
 <div class="post postContent">
     <div class="postDate">
-
+        {{post.CreationTime | date}}
     </div>
-    <div class="postDay">
+    <div class="postTag">
 
     </div>
     <br>
     <div class="postTitle">
-
+        {{post.Title}}
     </div>
     <div class="postExt">
-        
+        {{post.Summary}}
     </div>
 </div>
