bugfix(PaginatedList): modify PaginateList struct

--- a/PiBlogWeb/src/app/post-card/post-card.component.html
+++ b/PiBlogWeb/src/app/post-card/post-card.component.html
@@ -1,15 +1,15 @@
 <div class="post postContent">
     <div class="postDate">
-        {{post.CreationTime | date}}
+        {{post.creationTime | date}}
     </div>
     <div class="postTag">
 
     </div>
     <br>
     <div class="postTitle">
-        {{post.Title}}
+        {{post.title}}
     </div>
     <div class="postExt">
-        {{post.Summary}}
+        {{post.summary}}
     </div>
 </div>
